[build-system]
requires = [
    "scikit-build-core",
    "oldest-supported-numpy",
    "cython>=3.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "nc_complex"
description = "Nicer interface for complex types in netCDF"
authors = [{name = "Peter Hill", email = "peter.hill@york.ac.uk"}]
requires-python = ">=3.8"
dependencies = [
    "cftime",
    "certifi",
    "numpy",
]
version = "0.1.0"
