[build-system]
requires = [
    "scikit-build-core",
    "oldest-supported-numpy",
    "cython>=3.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "nc_complex"
description = "Nicer interface for complex types in netCDF"
authors = [{name = "Peter Hill", email = "peter.hill@york.ac.uk"}]
requires-python = ">=3.8"
dependencies = [
    "cftime",
    "certifi",
    "numpy",
]
version = "0.1.0"

[tool.cibuildwheel]
archs = ["x86_64"]

manylinux-x86_64-image = "manylinux_2_28"

skip = ["cp36-*", "cp37-*", "pp*", "*musllinux*"]

build-frontend = { name = "pip", args = ["-v"] }

[tool.cibuildwheel.linux]
before-all = [
    "dnf install -y epel-release",
    "dnf install -y hdf5-devel libcurl-devel",
    "sh ./ci/build_deps.sh",
]

repair-wheel-command = [
    "export LD_LIBRARY_PATH=/usr/local/lib64/:$LD_LIBRARY_PATH",
    "auditwheel repair -w {dest_dir} {wheel}"
]

[tool.scikit-build.cmake.define]
nc_complex_PACKAGING_MAINTAINER_MODE = "ON"
